added space button to shoot

--- a/animation.html
+++ b/animation.html
@@ -10,5 +10,7 @@
 </head>
 <body>
     <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 1px solid brown; background: gray"></canvas>
+    <p>Jowy Tran</p>
+    <p>Hit the Space Bar to fire more Hadoukens</p>
 </body>
 </html>
