--- a/animation.html
+++ b/animation.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 1px solid brown; background: gray"></canvas>
+    <audio src="./iceball.wav" id="iceball" preload="auto"></audio>
+            <script>
+            document.getElementById("iceball").volume = 1;
+            document.getElementById("bgm").play();
+        </script>
     <p>Jowy Tran</p>
     <p>Hit the Space Bar to fire more Hadoukens</p>
 </body>
